major change in bg

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     <script>
       new kursor({
           type: 4,
-          color: '#FFFFFF'
+          color: '#0000ff'
       })
   </script>
   </body>
